--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
+    "@digitalcredentials/vc": "^5.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.4",
