--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@digitalcredentials/vc": "^5.0.0"
+    "@digitalcredentials/vc": "^5.0.0",
+    "@digitalcredentials/bnid": "^2.1.2",
+    "@digitalcredentials/did-method-key": "^2.0.3",
+    "@digitalcredentials/ed25519-signature-2020": "^3.0.2",
+    "@digitalcredentials/security-document-loader": "^1.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.4",
